examples/test/testpolicy4801.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4801
  namespace: namespace154
spec:
  podSelector:
    matchLabels:
      key21: value48
      key6: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value28
          key43: value15
      podSelector:
        matchLabels:
          key24: value2
          key39: value23
